--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 <body>
-    <div class = "TestArea"></div>
-    <div class = "TestArea"></div>
-    <div class = "TestArea"></div>
-    <div class = "TestArea"></div>
+    <ul>
+        <li class = "TestContainer" style="--color: red">
+            <div class = "TestItem" >
+                <p>Item 1</p>
+            </div>
+            <h1>RED</h1>
+        </li>
+        <li class = "TestContainer" style="--color: blue">
+            <div class = "TestItem">
+                <p>Item 2</p>
+            </div>
+            <h1 class="TestItem">BLUE</h1>
+        </li>
+        <li class = "TestContainer" style="--color: yellow">
+            <div class = "TestItem" >
+                <p>Item 3</p>
+            </div>
+        </li>
+    
 </body>
 </html>
